--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -60,11 +60,16 @@ build/browser/src/components/text-editor/index.js: zu5smFUc
 build/browser/src/components/site-builder/html.js: 3OarYjYU
 build/browser/src/components/site-builder/index.js: eC9muVa0
 build/browser/src/configuration.js: VkEn3sse
-build/browser/src/helpers/profile.js: mNCwI0gx
+build/browser/src/helpers/profile.js: 8_JoyWgZ
 build/browser/src/index.js: vuNu_oPu
-build/browser/src/components/connect/index.js: fxpE_bCu
+build/browser/src/components/connect/index.js: y9AWKE2F
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/connect/css.js: FG4ecNpu
-build/browser/src/components/view-sites/index.js: je7Y2p17
-build/browser/src/components/view-sites/html.js: QCOEAz64
+build/browser/src/components/view-sites/index.js: peHYWKT7
+build/browser/src/components/view-sites/html.js: CGI6A3SV
 build/browser/src/components/view-sites/css.js: FG4ecNpu
+build/browser/src/helpers/render/component.js: 7SbJi281
+build/browser/src/helpers/component.js: wXy_7XFv
+build/browser/src/helpers/render/index.js: CXrdX6kl
+build/browser/src/helpers/render/link.js: 5AYYRUNn
+build/browser/src/helpers/router.js: nGAaeJwW
