--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -73,6 +73,6 @@ build/browser/src/helpers/component.js: wXy_7XFv
 build/browser/src/helpers/render/index.js: CXrdX6kl
 build/browser/src/helpers/render/link.js: 5AYYRUNn
 build/browser/src/helpers/router.js: nGAaeJwW
-build/browser/src/components/create-site/index.js: rv46AC8-
+build/browser/src/components/create-site/index.js: 7bK6FL6h
 build/browser/src/components/create-site/css.js: FG4ecNpu
 build/browser/src/components/create-site/html.js: RFmsPQ_D
