--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -59,7 +59,7 @@ build/browser/src/components/site-editor/html.js: nYhx8TO_
 build/browser/src/components/text-editor/index.js: zu5smFUc
 build/browser/src/components/site-builder/html.js: 3OarYjYU
 build/browser/src/components/site-builder/index.js: eC9muVa0
-build/browser/src/configuration.js: YsBJS64d
+build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/helpers/profile.js: 8_JoyWgZ
 build/browser/src/index.js: eqCi-Cxg
 build/browser/src/components/connect/index.js: VcPzQ3X_
