--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -61,18 +61,21 @@ build/browser/src/components/site-builder/html.js: 3OarYjYU
 build/browser/src/components/site-builder/index.js: eC9muVa0
 build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/helpers/profile.js: 8_JoyWgZ
-build/browser/src/index.js: eqCi-Cxg
+build/browser/src/index.js: 2nkP19kh
 build/browser/src/components/connect/index.js: VcPzQ3X_
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/components/view-sites/index.js: zjbqoPp2
-build/browser/src/components/view-sites/html.js: CGI6A3SV
+build/browser/src/components/view-sites/html.js: x2fT57MI
 build/browser/src/components/view-sites/css.js: FG4ecNpu
 build/browser/src/helpers/render/component.js: 7SbJi281
 build/browser/src/helpers/component.js: wXy_7XFv
 build/browser/src/helpers/render/index.js: CXrdX6kl
 build/browser/src/helpers/render/link.js: 5AYYRUNn
 build/browser/src/helpers/router.js: nGAaeJwW
-build/browser/src/components/create-site/index.js: 7bK6FL6h
+build/browser/src/components/create-site/index.js: ItimDZSS
 build/browser/src/components/create-site/css.js: FG4ecNpu
 build/browser/src/components/create-site/html.js: RFmsPQ_D
+build/browser/src/components/summarize-site/index.js: 4nySYyZg
+build/browser/src/components/summarize-site/css.js: FG4ecNpu
+build/browser/src/components/summarize-site/html.js: lATCmraA
