--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -61,13 +61,13 @@ build/browser/src/components/site-builder/html.js: 3OarYjYU
 build/browser/src/components/site-builder/index.js: eC9muVa0
 build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/helpers/profile.js: 8_JoyWgZ
-build/browser/src/index.js: 2nkP19kh
+build/browser/src/index.js: GpKm32JB
 build/browser/src/components/connect/index.js: VcPzQ3X_
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/components/view-sites/index.js: zjbqoPp2
-build/browser/src/components/view-sites/html.js: x2fT57MI
-build/browser/src/components/view-sites/css.js: FG4ecNpu
+build/browser/src/components/view-sites/html.js: 6_Or_H2S
+build/browser/src/components/view-sites/css.js: 6ZCiAnrS
 build/browser/src/helpers/render/component.js: 7SbJi281
 build/browser/src/helpers/component.js: wXy_7XFv
 build/browser/src/helpers/render/index.js: CXrdX6kl
@@ -78,4 +78,10 @@ build/browser/src/components/create-site/css.js: FG4ecNpu
 build/browser/src/components/create-site/html.js: RFmsPQ_D
 build/browser/src/components/summarize-site/index.js: 4nySYyZg
 build/browser/src/components/summarize-site/css.js: FG4ecNpu
-build/browser/src/components/summarize-site/html.js: lATCmraA
+build/browser/src/components/summarize-site/html.js: nszJwnBb
+build/browser/src/components/site/editor/css.js: FG4ecNpu
+build/browser/src/components/site/editor/html.js: gSYqqiNS
+build/browser/src/components/site/editor/index.js: xqOXodEX
+build/browser/src/components/site/edit/css.js: FG4ecNpu
+build/browser/src/components/site/edit/index.js: CGPCUh0R
+build/browser/src/components/site/edit/html.js: nU0NW16t
