--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -61,19 +61,19 @@ build/browser/src/components/site-builder/html.js: 3OarYjYU
 build/browser/src/components/site-builder/index.js: eC9muVa0
 build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/helpers/profile.js: 8_JoyWgZ
-build/browser/src/index.js: cuPskaJo
+build/browser/src/index.js: 7Nr60C9a
 build/browser/src/components/connect/index.js: VcPzQ3X_
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/components/view-sites/index.js: zjbqoPp2
-build/browser/src/components/view-sites/html.js: 6_Or_H2S
+build/browser/src/components/view-sites/html.js: I2xhvR7b
 build/browser/src/components/view-sites/css.js: 6ZCiAnrS
 build/browser/src/helpers/render/component.js: 7SbJi281
 build/browser/src/helpers/component.js: wXy_7XFv
 build/browser/src/helpers/render/index.js: CXrdX6kl
 build/browser/src/helpers/render/link.js: 5AYYRUNn
 build/browser/src/helpers/router.js: nGAaeJwW
-build/browser/src/components/create-site/index.js: ItimDZSS
+build/browser/src/components/create-site/index.js: UgLQdKLC
 build/browser/src/components/create-site/css.js: FG4ecNpu
 build/browser/src/components/create-site/html.js: RFmsPQ_D
 build/browser/src/components/summarize-site/index.js: 4nySYyZg
@@ -87,4 +87,14 @@ build/browser/src/components/site/edit/index.js: CGPCUh0R
 build/browser/src/components/site/edit/html.js: nU0NW16t
 build/browser/src/components/site/delete/html.js: sb7z2YEh
 build/browser/src/components/site/delete/css.js: FG4ecNpu
-build/browser/src/components/site/delete/index.js: '-jhWVcyg'
+build/browser/src/components/site/delete/index.js: eN7AhThI
+build/browser/src/helpers/site.js: ONJ8VzdQ
+build/browser/src/components/site/summarize/css.js: FG4ecNpu
+build/browser/src/components/site/create/css.js: FG4ecNpu
+build/browser/src/components/sites/view/index.js: GWHr4Fw3
+build/browser/src/components/site/summarize/html.js: 9uOR6emx
+build/browser/src/components/site/create/html.js: OsIUjK47
+build/browser/src/components/site/create/index.js: i17MUo57
+build/browser/src/components/site/summarize/index.js: RvCs-4Ad
+build/browser/src/components/sites/view/css.js: 6ZCiAnrS
+build/browser/src/components/sites/view/html.js: aLLEodGu
