--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,103 +1,24 @@
-build/browser/src/components/link-creator/index.js: Rc1geSCe
-build/browser/src/components/gadget-creator/html.js: d0D79sun
-build/browser/src/components/navigation-creator/css.js: arTZkyGc
-build/browser/src/components/image-creator/waiting.js: xQIg9hVK
-build/browser/src/components/page-creator/index.js: mBm1w_3B
-build/browser/src/components/link-editor/index.js: hPiSPLQA
-build/browser/src/components/page-editor/css.js: PJOUCbt9
-build/browser/src/components/page-creator/css.js: PJOUCbt9
-build/browser/src/components/layout-editor/index.js: OiXAq3vb
-build/browser/src/components/icon-creator/css.js: PJOUCbt9
-build/browser/src/components/gadget-creator/css.js: _ZuAHepW
-build/browser/src/components/icon-editor/index.js: xK8OEy2s
-build/browser/src/components/layout-creator/css.js: PJOUCbt9
-build/browser/src/components/link-creator/css.js: PJOUCbt9
-build/browser/src/components/link-creator/html.js: hX6M-b4u
-build/browser/src/components/image-editor/waiting.js: wb8eI9y9
-build/browser/src/components/layout-creator/index.js: 4FnyLVlz
-build/browser/src/components/page-creator/html.js: 8vkm6C3b
-build/browser/src/components/navigation-editor/css.js: PJOUCbt9
-build/browser/src/components/layout-editor/css.js: PJOUCbt9
-build/browser/src/components/navigation-creator/index.js: YDJRlbPf
-build/browser/src/components/link-editor/css.js: PJOUCbt9
-build/browser/src/components/page-editor/html.js: XnMU4imN
-build/browser/src/components/navigation-creator/html.js: PA7d9Dwq
-build/browser/src/helpers/gadget.js: IItnRloo
-build/browser/src/components/navigation-editor/index.js: 9VXzce9L
-build/browser/src/components/layout-editor/html.js: pyWY6WoX
-build/browser/src/components/link-editor/html.js: lZxNdukE
-build/browser/src/components/icon-creator/index.js: uhFZa5y9
-build/browser/src/components/page-preview/css.js: hJQYAb7f
-build/browser/src/components/site-add/index.js: HW1KinHi
-build/browser/src/components/site-delete/css.js: h_uFLd3Q
-build/browser/src/components/site-add/html.js: htwE1Ije
-build/browser/src/components/site-delete/html.js: PhhZadCN
-build/browser/src/components/site-add/waiting.js: hEnTvBpg
-build/browser/src/components/page-preview/html.js: O22Vbt-r
-build/browser/src/components/site-editor/css.js: a9jqC8ET
-build/browser/src/components/navigation-editor/html.js: WTM22Nlu
-build/browser/src/components/text-creator/css.js: SLw5CNPE
-build/browser/src/components/site-delete/waiting.js: qhgxWm78
-build/browser/src/components/site-summary/html.js: svhLdY_G
-build/browser/src/components/site-summary/index.js: o1vQ59F8
-build/browser/src/components/text-editor/css.js: SLw5CNPE
-build/browser/src/components/site-editor/index.js: 6qvxdbGL
-build/browser/src/components/sites-home/index.js: 7q9E0HzH
-build/browser/src/components/site-delete/main.js: lV8t3Kgm
-build/browser/src/components/site-add/main.js: _Y--SOLU
-build/browser/src/components/text-creator/html.js: XpJOqkW5
-build/browser/src/components/text-creator/index.js: 2shySccr
-build/browser/src/components/site-builder/css.js: W2ZEn5Sg
-build/browser/src/components/site-summary/css.js: p0DYBtlr
-build/browser/src/components/sites-home/css.js: bbKFf8uk
-build/browser/src/components/page-editor/index.js: QliCZ3E0
-build/browser/src/components/sites-home/html.js: bm_REF9Q
-build/browser/src/components/text-editor/html.js: 4InEp9sE
-build/browser/src/components/site-delete/index.js: K2byhxF9
-build/browser/src/components/page-preview/index.js: 3qdG0A1N
-build/browser/src/components/site-editor/html.js: nYhx8TO_
-build/browser/src/components/text-editor/index.js: zu5smFUc
-build/browser/src/components/site-builder/html.js: 3OarYjYU
-build/browser/src/components/site-builder/index.js: eC9muVa0
-build/browser/src/configuration.js: _pNE5Typ
-build/browser/src/helpers/profile.js: 8_JoyWgZ
-build/browser/src/index.js: 7Nr60C9a
-build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/connect/html.js: owQ9rFDf
-build/browser/src/components/connect/css.js: FG4ecNpu
-build/browser/src/components/view-sites/index.js: zjbqoPp2
-build/browser/src/components/view-sites/html.js: I2xhvR7b
-build/browser/src/components/view-sites/css.js: 6ZCiAnrS
-build/browser/src/helpers/render/component.js: 7SbJi281
-build/browser/src/helpers/component.js: wXy_7XFv
-build/browser/src/helpers/render/index.js: CXrdX6kl
-build/browser/src/helpers/render/link.js: 5AYYRUNn
-build/browser/src/helpers/router.js: nGAaeJwW
-build/browser/src/components/create-site/index.js: UgLQdKLC
-build/browser/src/components/create-site/css.js: FG4ecNpu
-build/browser/src/components/create-site/html.js: RFmsPQ_D
-build/browser/src/components/summarize-site/index.js: 4nySYyZg
-build/browser/src/components/summarize-site/css.js: FG4ecNpu
-build/browser/src/components/summarize-site/html.js: GrPm9F2M
-build/browser/src/components/site/editor/css.js: FG4ecNpu
-build/browser/src/components/site/editor/html.js: gSYqqiNS
-build/browser/src/components/site/editor/index.js: xqOXodEX
-build/browser/src/components/site/edit/css.js: fmJCoTzV
-build/browser/src/components/site/edit/index.js: idiXScr3
-build/browser/src/components/site/edit/html.js: fqCo6oNR
-build/browser/src/components/site/delete/html.js: sb7z2YEh
-build/browser/src/components/site/delete/css.js: FG4ecNpu
-build/browser/src/components/site/delete/index.js: eN7AhThI
-build/browser/src/helpers/site.js: ONJ8VzdQ
-build/browser/src/components/site/summarize/css.js: FG4ecNpu
 build/browser/src/components/site/create/css.js: FG4ecNpu
-build/browser/src/components/sites/view/index.js: GWHr4Fw3
-build/browser/src/components/site/summarize/html.js: 9uOR6emx
 build/browser/src/components/site/create/html.js: OsIUjK47
-build/browser/src/components/site/create/index.js: i17MUo57
-build/browser/src/components/site/summarize/index.js: RvCs-4Ad
+build/browser/src/components/site/delete/css.js: FG4ecNpu
+build/browser/src/components/connect/html.js: owQ9rFDf
+build/browser/src/components/connect/index.js: VcPzQ3X_
+build/browser/src/components/site/delete/html.js: sb7z2YEh
+build/browser/src/components/site/summarize/css.js: FG4ecNpu
+build/browser/src/components/site/edit/css.js: UVc3ZrXR
+build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/sites/view/css.js: 6ZCiAnrS
+build/browser/src/components/site/edit/helpers.js: gCV9lPbC
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/edit/icons.js: zlmHG4i3
-build/browser/src/components/site/edit/node.js: _c2ySYkR
-build/browser/src/components/site/edit/helpers.js: lXtpDdrt
+build/browser/src/components/site/edit/index.js: lS1w4Wo6
+build/browser/src/components/site/summarize/index.js: RvCs-4Ad
+build/browser/src/components/site/create/index.js: i17MUo57
+build/browser/src/helpers/site.js: ONJ8VzdQ
+build/browser/src/components/site/delete/index.js: eN7AhThI
+build/browser/src/components/site/summarize/html.js: 9uOR6emx
+build/browser/src/index.js: 7Nr60C9a
+build/browser/src/components/site/edit/node.js: C7_BUSx7
+build/browser/src/components/site/edit/html.js: wL51DyrY
+build/browser/src/components/connect/css.js: FG4ecNpu
+build/browser/src/configuration.js: _pNE5Typ
