--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -5,21 +5,42 @@ build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/connect/index.js: VcPzQ3X_
 build/browser/src/components/site/delete/html.js: sb7z2YEh
 build/browser/src/components/site/summarize/css.js: FG4ecNpu
-build/browser/src/components/site/edit/css.js: de6iGxm6
+build/browser/src/components/site/edit/css.js: s6X76UC-
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/sites/view/css.js: 6ZCiAnrS
-build/browser/src/components/site/edit/helpers.js: gCV9lPbC
+build/browser/src/components/site/edit/helpers.js: gowEQ5Rj
 build/browser/src/components/sites/view/html.js: aLLEodGu
-build/browser/src/components/site/edit/icons.js: rAMUSP15
-build/browser/src/components/site/edit/index.js: lS1w4Wo6
+build/browser/src/components/site/edit/icons.js: LK_CCr_4
+build/browser/src/components/site/edit/index.js: eJM9alSv
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/components/site/create/index.js: i17MUo57
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/site/delete/index.js: eN7AhThI
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
-build/browser/src/index.js: 7Nr60C9a
-build/browser/src/components/site/edit/node.js: kCV-SxN9
-build/browser/src/components/site/edit/html.js: WvRHuFqZ
+build/browser/src/index.js: KPGb4eBa
+build/browser/src/components/site/edit/node.js: Zs3LwhtQ
+build/browser/src/components/site/edit/html.js: tFRJlstM
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/configuration.js: _pNE5Typ
-build/browser/src/components/site/edit/mock.js: cDMnI3Q2
+build/browser/src/components/site/edit/mock.js: KKOdceFp
+build/browser/src/components/site/edit/actions.js: b72Y6Yhs
+build/browser/src/components/site/edit/tree.js: R_JGfh8V
+build/browser/src/components/site/edit/render/index.js: DIlo87_f
+build/browser/src/components/site/edit/render/icons.js: 9eYeONJ7
+build/browser/src/components/site/edit/render/actions.js: 9yJ4cKMY
+build/browser/src/components/site/edit/render/tree.js: ch25P9R5
+build/browser/src/components/site/add/css.js: FG4ecNpu
+build/browser/src/components/site/remove/css.js: FG4ecNpu
+build/browser/src/components/site/add/html.js: b-qHXDy5
+build/browser/src/components/site/index.js: sCuXfKaP
+build/browser/src/components/site/add/index.js: Cuu2Sgc_
+build/browser/src/gadget/index.js: wsuOhC6Q
+build/browser/src/gadget/add/index.js: WL4qAQ3g
+build/browser/src/components/sites/index.js: hM57VLk-
+build/browser/src/components/site/remove/html.js: K0xADcL9
+build/browser/src/components/site/remove/index.js: I6VuQZSn
+build/browser/src/components/gadget/add/index.js: FH5Wsc7H
+build/browser/src/components/gadget/index.js: Qq2YrOnT
+build/browser/src/components/gadget/add/css.js: FG4ecNpu
+build/browser/src/components/gadget/add/html.js: lkTovyz1
+build/browser/src/components/site/edit/render/editor.js: 5xvYb38r
