--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -12,12 +12,12 @@ build/browser/src/helpers/icons.js: g49P5Cdu
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: s6X76UC-
+build/browser/src/components/site/edit/css.js: jb6USUjP
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: zdYJAhYg
+build/browser/src/components/site/edit/index.js: bJyMHEjh
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -33,6 +33,6 @@ build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/site/add/html.js: b-qHXDy5
 build/browser/src/components/layout/index.js: zxs9nDXG
-build/browser/src/components/layout/add/css.js: FG4ecNpu
-build/browser/src/components/layout/add/html.js: uefqWxHG
+build/browser/src/components/layout/add/css.js: Ch1usuV4
+build/browser/src/components/layout/add/html.js: uc4jyNaE
 build/browser/src/components/layout/add/index.js: ks4hdmFD
