--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -34,5 +34,5 @@ build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/site/add/html.js: b-qHXDy5
 build/browser/src/components/layout/index.js: zxs9nDXG
 build/browser/src/components/layout/add/css.js: Ch1usuV4
-build/browser/src/components/layout/add/html.js: uc4jyNaE
+build/browser/src/components/layout/add/html.js: no3SSrcM
 build/browser/src/components/layout/add/index.js: ks4hdmFD
