details-based tree

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -5,34 +5,37 @@ build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
 build/browser/src/components/site/remove/index.js: I6VuQZSn
-build/browser/src/components/site/edit/html.js: tFRJlstM
+build/browser/src/components/site/edit/html.js: Zd1eg5Qy
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
 build/browser/src/helpers/icons.js: g49P5Cdu
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: jb6USUjP
+build/browser/src/components/site/edit/css.js: mHIL130y
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: bJyMHEjh
+build/browser/src/components/site/edit/index.js: FXG9-c-K
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
 build/browser/src/components/site/edit/mock.js: KKOdceFp
 build/browser/src/components/site/edit/render/index.js: Nk8PfE_Y
 build/browser/src/components/site/summarize/css.js: FG4ecNpu
-build/browser/src/components/site/edit/render/editor.js: bAdUOU-t
+build/browser/src/components/site/edit/render/editor.js: vE-f3RZg
 build/browser/src/components/sites/view/css.js: 6ZCiAnrS
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
-build/browser/src/components/site/edit/render/tree.js: bBzYKxw0
+build/browser/src/components/site/edit/render/tree.js: CGrp24YH
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/components/connect/html.js: owQ9rFDf
 build/browser/src/components/site/add/html.js: b-qHXDy5
-build/browser/src/components/layout/index.js: zxs9nDXG
+build/browser/src/components/layout/index.js: M_VasUJR
 build/browser/src/components/layout/add/css.js: Ch1usuV4
 build/browser/src/components/layout/add/html.js: no3SSrcM
 build/browser/src/components/layout/add/index.js: ks4hdmFD
+build/browser/src/components/layout/edit/css.js: Ch1usuV4
+build/browser/src/components/layout/edit/index.js: CQ7Gsfe8
+build/browser/src/components/layout/edit/html.js: 5vERChfJ
