explict state management

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,11 +1,11 @@
-build/browser/src/components/gadget/add/index.js: kDoJo36T
+build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: DIxeftkv
+build/browser/src/components/site/edit/helpers.js: GI7bRq21
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
 build/browser/src/components/site/remove/index.js: I6VuQZSn
-build/browser/src/components/site/edit/html.js: wOwpqZ_d
+build/browser/src/components/site/edit/html.js: N3QukE-B
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
 build/browser/src/helpers/icons.js: g49P5Cdu
@@ -17,7 +17,7 @@ build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: D-RL15NC
+build/browser/src/components/site/edit/index.js: Y0h5ag0h
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -37,14 +37,14 @@ build/browser/src/components/layout/add/css.js: Ch1usuV4
 build/browser/src/components/layout/add/html.js: no3SSrcM
 build/browser/src/components/layout/add/index.js: ks4hdmFD
 build/browser/src/components/layout/edit/css.js: Ch1usuV4
-build/browser/src/components/layout/edit/index.js: NmzsY4Ox
+build/browser/src/components/layout/edit/index.js: ZsurN6S1
 build/browser/src/components/layout/edit/html.js: kdz2_k7M
 build/browser/src/components/site/edit/state.js: UwlRSRMY
 build/browser/src/components/site/edit/mock/index.js: iJtL_kDW
 build/browser/src/components/site/edit/mock/data.js: KKOdceFp
 build/browser/src/components/layout/edit/helpers.js: tzSWCVzB
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
-build/browser/src/helpers/state.js: xIJGvoJK
-build/browser/src/helpers/observe.js: uB1f6-qd
+build/browser/src/helpers/state.js: 4ZwFlBJo
+build/browser/src/helpers/observe.js: hnbp9PRe
 build/browser/src/helpers/mock/data.js: KKOdceFp
 build/browser/src/helpers/mock/index.js: '-v23Nbt-'
