--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,6 +1,6 @@
 build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: GI7bRq21
+build/browser/src/components/site/edit/helpers.js: 5xTTsZYf
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
@@ -17,14 +17,14 @@ build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: Y0h5ag0h
+build/browser/src/components/site/edit/index.js: '-jo889xT'
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
 build/browser/src/components/site/edit/mock.js: KKOdceFp
 build/browser/src/components/site/edit/render/index.js: Nk8PfE_Y
 build/browser/src/components/site/summarize/css.js: FG4ecNpu
-build/browser/src/components/site/edit/render/editor.js: g1VBQIuq
+build/browser/src/components/site/edit/render/editor.js: EzCUcIZa
 build/browser/src/components/sites/view/css.js: 6ZCiAnrS
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/site/edit/render/tree.js: CGrp24YH
