dynamic drag targets

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,6 +1,6 @@
 build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: b5ge8JCa
+build/browser/src/components/site/edit/helpers.js: cXmv6gVd
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
@@ -12,12 +12,12 @@ build/browser/src/helpers/icons.js: g49P5Cdu
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: mHIL130y
+build/browser/src/components/site/edit/css.js: NsZXz_Rg
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: DzhKquRD
+build/browser/src/components/site/edit/index.js: A4JK_EAz
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -44,7 +44,7 @@ build/browser/src/components/site/edit/mock/index.js: iJtL_kDW
 build/browser/src/components/site/edit/mock/data.js: KKOdceFp
 build/browser/src/components/layout/edit/helpers.js: hytphRqI
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
-build/browser/src/helpers/state.js: 4ZwFlBJo
-build/browser/src/helpers/observe.js: hnbp9PRe
-build/browser/src/helpers/mock/data.js: otsxsEqM
+build/browser/src/helpers/state.js: lqI4FRWP
+build/browser/src/helpers/observe.js: 5BnBtBzO
+build/browser/src/helpers/mock/data.js: 3Vujop6f
 build/browser/src/helpers/mock/index.js: '-v23Nbt-'
