--- a/src/helpers/mock/data.yaml
+++ b/src/helpers/mock/data.yaml
@@ -4,14 +4,33 @@
   title: Welcome
   template: templates/page/basic
   content:
-    main:
-      - home/splash
-      - home/benefits
+    - home/header
+    - home/main
+    - home/footer
   hints: {}
-  color: "#7c23b7"
+  
+- type: layout
+  key: home/header
+  name: Header
+  hints: {}
+  content:
+    - home/header/logo
+
+- type: image
+  key: home/header/logo
+  name: Logo
+  hints: {}
 
 - type: layout
-  key: home/splash
+  key: home/main
+  name: Main
+  hints: {}
+  content:
+    - home/main/splash
+    - home/main/benefits
+
+- type: layout
+  key: home/main/splash
   name: Splash
   hints:
     width: widest
@@ -19,27 +38,27 @@
     alignment: center
     proximity: roomy
   content:
-    - home/splash/try-it
+    - home/main/splash/try-it
 
 - type: layout
-  key: home/benefits
+  key: home/main/benefits
   name: Benefits
   hints:
     width: widest
     proximity: roomy
   content:
-    - home/benefits/no-learning-curve
+    - home/main/benefits/no-learning-curve
 
 - type: link
   subtype: button
-  key: home/splash/try-it
+  key: home/main/splash/try-it
   name: Try It
   text: Try It For Free
   target: https://google.com
   hints: {}
 
 - type: text
-  key: home/benefits/no-learning-curve
+  key: home/main/benefits/no-learning-curve
   name: No Learning Curve
   title: No Learning Curve
   icon: magic
@@ -47,23 +66,15 @@
     You don't need to take a class to use our products. 
   hints: {}
 
-- type: template
-  key: templates/page/basic
-  name: Basic Page
-  content:
-    footer: 
-      - snippets/basic/footer
-  hints: {}
-
 - type: layout
-  key: snippets/basic/footer
-  name: Basic Footer
+  key: home/footer
+  name: Footer
   content:
-    - snippets/copyright-notice
+    - home/footer/copyright-notice
   hints: {}
 
 - type: text
-  key: snippets/copyright-notice
+  key: home/footer/copyright-notice
   name: Copyright Notice
   text: >-
     &copy; 2024 DashKite Inc, All Rights Reserved
