--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,6 +1,6 @@
 build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: cXmv6gVd
+build/browser/src/components/site/edit/helpers.js: FquY4_yt
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
@@ -12,12 +12,12 @@ build/browser/src/helpers/icons.js: g49P5Cdu
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: NsZXz_Rg
+build/browser/src/components/site/edit/css.js: fWVULe3o
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: A4JK_EAz
+build/browser/src/components/site/edit/index.js: WWmpcft5
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -27,7 +27,7 @@ build/browser/src/components/site/summarize/css.js: FG4ecNpu
 build/browser/src/components/site/edit/render/editor.js: EzCUcIZa
 build/browser/src/components/sites/view/css.js: 6ZCiAnrS
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
-build/browser/src/components/site/edit/render/tree.js: LBve0PeV
+build/browser/src/components/site/edit/render/tree.js: defU6oku
 build/browser/src/components/connect/css.js: FG4ecNpu
 build/browser/src/configuration.js: _pNE5Typ
 build/browser/src/components/connect/html.js: owQ9rFDf
